@@ -6,6 +6,7 @@ CHANGELOG
 BUGFIXES
 
 IMPROVEMENTS
+22-11-05    Added ServiceLocator class and fixed db independence for testing
 21-11-05    Factored out setup of table name aliases, these are not set on a per-module
             basis in the file 'tableAliases.ini' parsed at setup time.
 14-11-05    Added version-checker routine to Maintenance manager
